--- a/index.html
+++ b/index.html
@@ -248,19 +248,19 @@ DIV.Section1 {
 	    <span class="style21">
 	  <span style="font-weight: 400;"><span class="style4">I have just finished a two-year preiod as a postdoctoral researcher at
  <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft 
-		Research New England</a>, soon to join the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Prior to the time in Microsoft Research, I did a six 
+		Research New England</a>, soon to join the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Prior to the time at Microsoft Research, I did a six 
 		months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department 
 		of Computer Science, University of Haifa</font></a>, hosted by <a href="http://cs.haifa.ac.il/%7Eronen/">
 		Ronen shaltiel</a></span><span class="style8" style="">. 
 		I received my PhD in 2008 from the
 	  <a href="http://www.wisdom.weizmann.ac.il/">Faculty of Mathematics and 
-		Computer Science, Weizmann Institute of Science</a></span></span></span><span class="style8" style=""><span class="style4"></span><span class="style18"><span class="style4"> </span> </span>
+		Computer Science, Weizmann Institute of Science,</a></span></span></span><span class="style8" style=""><span class="style4"></span><span class="style18"><span class="style4"> </span> </span>
 		</span>
 		
 	  <span class="style8" style="">
 
 	    <span class="style5">
-	    <span class="style21">, under the supervision of
+	    <span class="style21"> under the supervision of
 	  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/">Omer Reingold</a></span></span></span><span class="style18"><span style="font-weight: 400;"><span class="style8" style="">. <span style="font-weight: 400;">
 
 	    I got my Master's degree also from the Weizmann Institute, under the 
