--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ DIV.Section1 {
 	</span></font></span></div>
 
 
-     
+
 
 	  <font style="font-weight: 400; font-size: 9pt;" face="Verdana">
 	  <span class="style8" style="">
@@ -236,29 +236,29 @@ DIV.Section1 {
      <span class="style18"><font class="style18"><b>Biography</b></font></span> <span class="style21">
 
 					<span style="font-weight: 400;"><br class="style4"></span>
-		</span> 
+		</span>
 
 	    <span class="style21">
 	  <span style="font-weight: 400;"><span class="style4">I have just finished a two-year preiod as a postdoctoral researcher at
  <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 		Research New England</a>, soon to join the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Prior to the time at Microsoft Research, I did a six
-		months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department 
+		months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department
 		of Computer Science, University of Haifa</font></a>, hosted by <a href="http://cs.haifa.ac.il/%7Eronen/">
-		Ronen shaltiel</a></span><span class="style8" style="">. 
+		Ronen shaltiel</a></span><span class="style8" style="">.
 		I received my PhD in 2008 from the
-	  <a href="http://www.wisdom.weizmann.ac.il/">Faculty of Mathematics and 
+	  <a href="http://www.wisdom.weizmann.ac.il/">Faculty of Mathematics and
 		Computer Science, Weizmann Institute of Science,</a></span></span></span><span class="style8" style=""><span class="style4"></span><span class="style18"><span class="style4"> </span> </span>
 		</span>
-		
+
 	  <span class="style8" style="">
 
 	    <span class="style5">
 	    <span class="style21"> under the supervision of
 	  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/">Omer Reingold</a></span></span></span><span class="style18"><span style="font-weight: 400;"><span class="style8" style="">. <span style="font-weight: 400;">
 
-	    I got my Master's degree also from the Weizmann Institute, under the 
+	    I got my Master's degree also from the Weizmann Institute, under the
 		supervision of
-	  <a href="http://www.wisdom.weizmann.ac.il/%7Eoded/">Oded Goldreich</a>, and 
+	  <a href="http://www.wisdom.weizmann.ac.il/%7Eoded/">Oded Goldreich</a>, and
 		did my undergraduate studies (Mathematics and Computer Science) at
 	  <a href="http://www.tau.ac.il/">Tel-Aviv university</a><font class="style18"><span class="style18">.</span></font><br><br>
 
@@ -348,23 +348,24 @@ DIV.Section1 {
 
 	  </font></td>
 
- <td style="width: 46%;" height="79">
 
-      &nbsp;</td>
-	  <td>&nbsp;</td>
 	  </tr>
 
 	</tbody>
 </table>
 
+ <table align="center" >
+          <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
 
- <tr>
- <h2 class="style15">Teaching:</h2>   <a
+    <tr>  <td align="left">
+ <h2 class="style16">Teaching</h2>   <a
       href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/f10.html" <font
-      size=3>Introduction to Cryptography   </font>  </a>
-      , <a  href="http://www.cs.tau.ac.il/~iftachh/Courses/Pseudorandomness/seminar.html" <font
-      size=3>Seminar on Pseodorandomnes</font> </a>
+      size=3>Introduction to Cryptography</font>  </a>, <a  href="http://www.cs.tau.ac.il/~iftachh/Courses/Pseudorandomness/seminar.html" <font
+      size=3>Seminar on Pseodorandomnes</font> </a><br></br>  </td>
      </tr>
+ </table>
+
+
 
 <table class="style13" style="width: 71%; height: 201px;" align="center" border="0" cellpadding="8" cellspacing="1">
 
