--- a/Courses/Pseudorandomness/seminar.html
+++ b/Courses/Pseudorandomness/seminar.html
@@ -1498,14 +1498,14 @@ schedule</big><span style="FONT-WEIGHT: bold"></span><br>
     </tr>
     <tr >
       <td
- style="BORDER-BOTTOM: 1pt solid; TEXT-ALIGN: center; BORDER-LEFT: 1pt solid; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 84.65pt; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; VERTICAL-ALIGN: middle; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" 
+ style="BORDER-BOTTOM: 1pt solid; TEXT-ALIGN: center; BORDER-LEFT: 1pt solid; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 84.65pt; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; VERTICAL-ALIGN: middle; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial"
    >
       <p style="TEXT-ALIGN: center" align="center"><span
  style="FONT-FAMILY: 'Sylfaen','serif'">1<br>
       <o:p></o:p></span></p>
       </td>
       <td
- style="BORDER-BOTTOM: 1pt solid; TEXT-ALIGN: center; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 106.35pt; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; VERTICAL-ALIGN: middle; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" 
+ style="BORDER-BOTTOM: 1pt solid; TEXT-ALIGN: center; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 106.35pt; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; VERTICAL-ALIGN: middle; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial"
      >
       <p style="TEXT-ALIGN: center" align="center"><span dir="rtl"
  style="FONT-FAMILY: 'Tahoma','sans-serif'" lang="HE">&nbsp;21.10</span><br>
@@ -1514,12 +1514,14 @@ schedule</big><span style="FONT-WEIGHT: bold"></span><br>
       <span dir="rtl" style="FONT-FAMILY: 'Tahoma','sans-serif'"
  lang="HE"> </span><span style="FONT-FAMILY: 'Tahoma','sans-serif'"><span
  dir="rtl" lang="HE"></span><o:p></o:p></span> </td>
-      <td
- style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
- ="top" width="491">
-      <p class="MsoNormal"><span style="COLOR: black" lang="EN-US"></span><span
- style="COLOR: black"></span><br>
-      </p>
+        <td
+ style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215)  0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign
+ ="top" width="491"><span style="COLOR: black" lang="EN-US"></span><span
+ style="COLOR: black"></span>
+      <p class="MsoNoSpacing" align="center"><br><span style="FONT-SIZE: 14pt"><o:p><font
+      ><font size="4">Iftach Haitner
+      </span></font>
+       </font></o:p></span></p>
       </td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
