--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ DIV.Section1 {
 
     <td rowspan="2" style="width: 122%;" height="103">
 
-      <h1 class="style15">Iftach Haitner <span class="style24" lang="he">יפתח היטנר</span></h1>
+      <h1 class="style15">Iftach Haitner <span class="style24" lang="he">יפתח הייטנר</span></h1>
 
 
 	  <div class="box" id="Img1" style="border-style: none; border-width: 1px; display: block;">
@@ -239,9 +239,9 @@ DIV.Section1 {
 		</span>
 
 	    <span class="style21">
-	  <span style="font-weight: 400;"><span class="style4">I have just finished a two-year preiod as a postdoctoral researcher at
- <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
-		Research New England</a>, soon to join the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Prior to the time at Microsoft Research, I did a six
+	  <span style="font-weight: 400;"><span class="style4">I have just joined the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Untill July 2010,
+      I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
+	  Research New England</a>.<br> Prior to the time at Microsoft Research, I did a six
 		months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department
 		of Computer Science, University of Haifa</font></a>, hosted by <a href="http://cs.haifa.ac.il/%7Eronen/">
 		Ronen shaltiel</a></span><span class="style8" style="">.
@@ -358,10 +358,10 @@ DIV.Section1 {
           <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
 
     <tr>  <td align="left">
- <h2 class="style16">Teaching</h2>   <a
-      href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/f10.html" <font
-      size=3>Introduction to Cryptography</font>  </a>, <a  href="http://www.cs.tau.ac.il/~iftachh/Courses/Pseudorandomness/seminar.html" <font
-      size=3>Seminar on Pseodorandomnes</font> </a><br></br>  </td>
+ <span class="style16" ><b>Teaching</b> <a
+      href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/f10.html"   <font
+      size=2> Introduction to Cryptography</font></a>, <a  href="http://www.cs.tau.ac.il/~iftachh/Courses/Pseudorandomness/seminar.html" <font
+      size=2>Seminar on Pseodorandomnes</font> </a><br></br><span  </td>     <span>
      </tr>
  </table>
 
