--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ DIV.Section1 {
 
 
 
-	  <font style="font-weight: 400; font-size: 9pt;" face="Verdana">
+	  <font style="font-weight: 400; font-size: 11pt;" face="Verdana">
 	  <span class="style8" style="">
 	  <span class="style11" style="">
 	  <span class="style5">
@@ -358,9 +358,9 @@ DIV.Section1 {
           <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
 
     <tr>  <td align="left">
- <span class="style16" ><b>Teaching</b> <a
+ <span class="style16" ><br><b>Teaching</b><br> <a
       href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/f10.html"   <font
-      size=2> Introduction to Cryptography</font></a>, <a  href="http://www.cs.tau.ac.il/~iftachh/Courses/Pseudorandomness/seminar.html" <font
+      size=2> Foundation of Cryptography</font></a>, <a  href="http://www.cs.tau.ac.il/~iftachh/Courses/Pseudorandomness/seminar.html" <font
       size=2>Seminar on Pseodorandomnes</font> </a><br></br><span  </td>     <span>
      </tr>
  </table>
@@ -375,10 +375,12 @@ DIV.Section1 {
 
     <td dir="ltr" align="left" bgcolor="#dddddd" style="width: 766px">
 
-      <h1 class="style16">Publications&nbsp;</h1>
+      <h1 class="style16">Publications<br>
+<font face="Book Antiqua" size="2">
+in Reverse Chronological Order</font></h1>
 
       <ul>
-      
+
 
 
 
