--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@ DIV.Section1 {
 
 
 
+.auto-style1 {
+	color: #000000;
+	font-size: small;
+}
+.auto-style2 {
+	color: #0000FF;
+	font-size: small;
+}
+
+
+
 </style>
 
 
@@ -203,9 +214,7 @@ DIV.Section1 {
 	  <div class="box" id="Img1" style="border-style: none; border-width: 1px; display: block;">
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
-		<a href="javascript:MySwitch('Img1','Img2')"><img alt="" src="iftachG.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18">
-		  <br>
-	</span></font></span></div>
+		<a href="javascript:MySwitch('Img1','Img2')"><img alt="" src="iftachG.jpg" class="style22" height="192" width="254"></a></span><br></font></span></div>
 
     <div class="box" id="Img2" style="border-style: none; border-width: 1px; display: none;">
 
@@ -358,10 +367,13 @@ DIV.Section1 {
           <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
 
     <tr>  <td align="left">
- <span class="style16" ><br><b>Teaching</b><br> <a
+ <span class="style16" ><br><b>Teaching</b><br> </span>
+ <span class="auto-style1" > <a
       href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/f10.html"   <font
-      size=2> Foundation of Cryptography</font></a>, <a  href="http://www.cs.tau.ac.il/~iftachh/Courses/Pseudorandomness/seminar.html" <font
-      size=2>Seminar on Pseodorandomnes</font> </a><br></br><span  </td>     <span>
+      size=2> Foundation of Cryptography</font></a></span><span class="style16" ><span class="auto-style1" >, 
+		</span>
+		<a <font="" href="http://www.cs.tau.ac.il/~iftachh/Courses/Pseudorandomness/seminar.html" size="2">
+ <span class="auto-style2" >Seminar on Pseodorandomnes</font></span> </a><br></br><span  </td>     <span>
      </tr>
  </table>
 
@@ -1198,19 +1210,6 @@ that the receiver does not learn any additional information on
 		  <a href="papers/OTDenseTDP/OT_Dense_TCC_TCC.ps"></a><span style="color: blue;">[</span><a href="papers/OTDenseTDP/OTDenseTDP.pps">Slides</a><span style="color: blue;">]<br>
 		  </span><span class="style5">Draft of full version</span><span style="color: blue;">
 		  <a href="papers/OTDenseTDP/OTDenseTDP.pdf">[PDF]</a></span></span></span></h2>
-		  <div class="box" id="abstract-OTDenseTDP" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
-			  <h2><span style="font-weight: 400;">Until recently, the existence
-			  of family of trapdoor permutations (TDP) was believed (and
-			  claimed) to imply oblivious transfer. It was recently realized,
-			  however, that the commonly accepted general definition of TDP
-			  needs to be strengthened slightly in order to make the security
-			  proofs of TDP-based oblivious transfer go through. The
-			  strengthening is in the ``security" requirement of the TDP (i.e.,
-			  the hardness to invert condition). Here we present an alternative
-			  construction that only requires the TDP to have ``dense domains".
-			  Specifically we present an implementation of oblivious transfer
-			  based on any dense TDP. </span></h2>
-		  </div>
 
 
 	  </li></ul>
