--- a/Courses/Pseudorandomness/seminar.html
+++ b/Courses/Pseudorandomness/seminar.html
@@ -1669,7 +1669,7 @@ Algorithms and Complexity Classes <br>
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign
  ="top" width="491"><span style="COLOR: black" lang="EN-US"></span><span
  style="COLOR: black"></span>
-      <p class="MsoNoSpacing" align="center"><br><o:p><font
+      <p class="auto-style3"><br><o:p><font
       ><span class="auto-style4">Roey Ome</span><font size="4"><span class="auto-style4">r
       </span></font>
        </font></o:p></span></p>
@@ -1735,8 +1735,8 @@ k-wise <st1:place w:st="on"><st1:city w:st="on">Independence<br></st1:city></st1
       </td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
- ="top" width="491"><br>
-      </td>
+ ="top" width="491" class="auto-style3"><br>
+      <span class="auto-style4">Lev Tetrov</span></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style1">
