--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ our proof of security makes to the KDM query function is <strong>inherent</stron
 		  		    <span style="font-weight: 400;">
 		  		  <span class="style14"><span dir="LTR" class="style14">Advances in Cryptology - Eurocrypt,
 				2010.</span></span><br>
-		  [<a href="javascript:toggle('abstract-UOWHF')">Abstract</a>] [<a href="papers/RompelRevisted/RompelRevisited-EurocryptCamera.pdf">PDF</a>]<br>
+		  [<a href="javascript:toggle('abstract-UOWHF')">Abstract</a>] [<a href="papers/SampleWithSize/SampleWithSize_CCC.pdf">PDF</a>]<br>
 		  		  <span class="style14"><span dir="LTR" class="style14">Draft of full version
 					<a href="papers/RompelRevisted/RompelRevisited-eprint.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>&nbsp;</span></h2>
 		  <span style="font-weight: 400;">
@@ -586,7 +586,7 @@ Commitments and UOWHFs rely on the newer notion of inaccessible entropy.</span><
 		  <span class="style14">IEEE Conference on Computational Complexity&nbsp; 
 		  (CCC), 2010</span>.<br>
 		  [<a href="javascript:toggle('abstract-NPtoSHC')">Abstract</a>] 
-		  <br>
+		  		  <span class="style14"><span dir="LTR" class="style14">[<a href="papers/SampleWithSize/SampleWithSize_CCC.pdf">PDF</a>]</span></span><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>&nbsp;<br>
 		  		  <span class="style14"><span dir="LTR" class="style14">Draft of full version
 					[<a href="papers/SampleWithSize/SampleWithSize.pdf">PDF</a>]</span></span><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>&nbsp;</span></h2> 
 		  <div class="box" id="abstract-NPtoSHC" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
