--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@ long as the verifier is also given a good approximation of the value
 		  [<a href="papers/ArgumentPR/ArgumentPR_CR.pdf">PDF</a>]<span style="font-weight: 400;">
 		  [<a href="papers/ArgumentPR/Seminar.pptx">S<span class="style11">lides</span></a>]
 		  </span><br><span style="font-weight: 400;">Draft of full version
-				<a href="papers/ArgumentPR/ArgumentPR.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>
+				<a href="papers/KDI/KDI-full.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>
 		  </span></span></h2>
 		  
 		   <div class="box" id="abstract-ParallelRepetition" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
@@ -770,7 +770,7 @@ unconditionally.</span></h2>
 		  Encryption</b></span><br><span style="font-weight: 400;">Theory of Cryptography Conference (TCC), 2009.<br>[<a href="javascript:toggle('abstract-KDI')">Abstract</a>] [<a href="papers/KDI/KDI-TCC_CR.pdf">PDF</a>] <span style="font-weight: 400;">
 		  [<a href="papers/AccessibleEntropy/AccEntSemniar_f.pptx">S<span class="style11">lides</span></a>]
 		  </span><br>Draft of full version
-				<a href="papers/KDI/KDI_clouds.pptx">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b></span></h2>
+				<a href="papers/KDI/KDI-full.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b></span></h2>
 		  <div class="box" id="abstract-KDI" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">
 			  <p>We study the possibility of constructing encryption schemes secure<br>under
