--- a/index.html
+++ b/index.html
@@ -369,12 +369,11 @@ DIV.Section1 {
     <tr>  <td align="left">
  <span class="style16" ><br><b>Teaching</b><br> </span>
  <span class="auto-style1" > <a
-      href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/f10.html"   <font
+      href="Courses/FOC/f10.html"   <font
       size=2> Foundation of Cryptography</font></a></span><span class="style16" ><span class="auto-style1" >, 
-		</span>
-		<a <font="" href="http://www.cs.tau.ac.il/~iftachh/Courses/Pseudorandomness/seminar.html" size="2">
- <span class="auto-style2" >Seminar on Pseodorandomnes</font></span> </a><br></br><span  </td>     <span>
-     </tr>
+		<a
+      href="Courses/Pseudorandomness/seminar.html"   <font
+      size=2> Seminar on Pseudorandomness</a></span>     </tr>
  </table>
 
 
