--- a/Courses/Pseudorandomness/seminar.html
+++ b/Courses/Pseudorandomness/seminar.html
@@ -1425,7 +1425,7 @@ table.MsoTableGrid
   v:shapes="Picture_x0020_1"></span><span style="FONT-SIZE: 14pt"><span
  > </span><span ></span><o:p></o:p></span></p>
 <h1 class="Section1"><span style="FONT-SIZE: 26pt">Seminar on
-Psuedorandomness&nbsp;<br>
+Pseudorandomness&nbsp;<br>
 Id: </span>0368333001</h1>
 <h2 class="Section1"><span style="FONT-SIZE: 20pt"><a
  href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a></span></h2>
@@ -1440,7 +1440,7 @@ Vadhan</a>'s <span style="TEXT-DECORATION: underline"></span></span></big></big>
  style="FONT-SIZE: 14pt"><a
  href="http://people.seas.harvard.edu/%7Esalil/pseudorandomness/">monograph</a>&nbsp;</span></big></big><big><big><big><span
  style="FONT-SIZE: 14pt"><span dir="rtl"></span></span></big><span
- style="FONT-SIZE: 14pt">on psuedorandomness, where we more or less
+ style="FONT-SIZE: 14pt">on pseudorandomness, where we more or less
 follow Salil's <span style="TEXT-DECORATION: underline"></span></span></big></big><big><big><big><small><small><a
  href="http://people.seas.harvard.edu/%7Esalil/cs225/">Class</a></small></small></big></big></big><big><big><span
  style="FONT-SIZE: 14pt">.</span></big></big><a
