--- a/Courses/FOC/f10.html
+++ b/Courses/FOC/f10.html
@@ -23,9 +23,10 @@
 	  <p>
 	  <font-size="12"><b>Mondays 13-16, Room: קפלון 118<br></b></font-size="12">
 	  </p>
-	  <p><b>Instructors: <br></b></p>
+	  <p><b>Instructors: </b></p>
 	  <p><a href="http://www.cs.tau.ac.il/%7Ecanetti/">Ran
-Canetti</a> | Schreiber 304 </p>
+Canetti</a> | Schreiber 304 (in charge of the administrative issues of this 
+	  semester, i.e., late submissions)</p>
 	  <p><a href="http://www.cs.tau.ac.il/%7Eiftachh">Iftach Haitner</a>
 |
 Schreiber 20</p>
@@ -76,7 +77,7 @@ Bilinear forms, lattice-based crypto</span></font></li>
 	  <p><b>
 	  <a
  href="http://iwww2.tau.ac.il/yedion/syllabus.asp?course=0368416201&amp;year=2010">
-	  <b>Syllabus</b></a> <br></b></p>
+	  <b>Syllabus</b></a> </b></p>
 	  <p><b><a href="f10.html#Prerequisite"><b>Prerequisite</b></a></b><a
  href="http://iwww2.tau.ac.il/yedion/syllabus.asp?course=0368416201&amp;year=2010"><font
  face="Times New Roman" size="3"><span lang="HE"></span></font></a></p>
@@ -110,8 +111,8 @@ undergraduate course) is recommended but not required.</b></b></b> <b><b><b><br>
 project. Projects
 will include scribing of selected classes, updating Wikipedia entries,
 etc.</b></b></b><b><b><b> <br></b></b></b></li>
-		  <li><b><b><b>&nbsp;</b></b></b><b><b><b>There will also
-potentially be a final take home exam</b></b></b></li>
+		  <li><b>There will also
+potentially be a final take home exam</b></li>
       </ul>
       <b><b><b><a name="Problem_Sets"></a></b></b></b><b><b><b><br></b></b></b>
 	  <br><b><b><b></b></b></b>
@@ -122,7 +123,7 @@ potentially be a final take home exam</b></b></b></li>
  href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/FOC/f10-materials/ps-guidelines.pdf">guidelines for solutions.</a>
 	  </b></b></b>
 	  <ol>
-		  <li>Exe1 <a href="Ex1.pdf">pdf</a><br>Due Nov 7.</li>
+		  <li>Exe1 <a href="Ex1.pdf">pdf</a><br>Due Nov 29.</li>
 	  </ol>
       <ul>
       </ul>
@@ -134,8 +135,7 @@ that some of the
 notation, conventions, and definitions may differ slightly from
 lecture):</p>
 	  <b>Books:  </b>
-
-      <ul type="disc">
+	  <ul type="disc">
 
 
 
@@ -152,8 +152,9 @@ of Cryptography.</a>&nbsp;</i> <br></li>
     <ul type="disc">
         <li class="MsoNormal" style="">Ran Canetti.  
 		<a
- href="http://www.cs.tau.ac.il/%7Ecanetti/f08.html">Foundation of Cryptography (The 2008 course)</a>
-		<br></li>
+ href="http://www.cs.tau.ac.il/%7Ecanetti/f08.html">Foundation of Cryptography (The 2008 course)</a>&nbsp; 
+		and <a href="http://people.csail.mit.edu/ronitt/COURSE/S07/lec25.pdf">On 
+		Chernof and Chebichev bounds</a>.<br></li>
 		<li class="MsoNormal" style="">Salil Vadhan. 
 		<a
  href="http://people.seas.harvard.edu/~salil/cs120/">Introduction to Cryptography.</a>&nbsp; 
@@ -161,11 +162,17 @@ of Cryptography.</a>&nbsp;</i> <br></li>
 		<li class="MsoNormal" style="">Luca Trevisan. 
 		<a
  href="http://www.cs.berkeley.edu/~daw/cs276/">Cryptography.</a>&nbsp;<br></li>
+		<li class="MsoNormal" style="">Yehuda lindell
+		<a href="http://u.cs.biu.ac.il/~lindell/89-856/main-89-856.html">
+		Foundations of Cryptography</a>.</li>
 
 
            </ul>
       <br>
       </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; vertical-align: top;">&nbsp;</td>
     </tr>
   </tbody>
 </table>
