--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ the ``random permutation&quot; to the ``generic group&quot; model.</span></p>
 		  and <a href="http://www.cs.technion.ac.il/~erez/">Erez Petrank</a> </span>
 		  </span><br>
 					<span class="style14"><strong>Black-Box Constructions of 
-					Protocols for Secure Computation&nbsp;</strong><img height="11" src="new.gif" width="28"><br>
+					Protocols for Secure Computation&nbsp;</strong><span style="font-weight: 400;"><span dir="LTR" style="font-weight: 400"><b><img height="12" src="updated.gif" width="60"></b></span></span><br>
 					Manuscript 2010</span> <span style="font-weight: 400;"><br>[<a href="javascript:toggle('abstract-BBMPX')">Abstract</a>]<span class="style14"><span dir="LTR" class="style14"><a href="papers/BlackBoxMPC/black-box-mpc.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span></span></h2>
 					</li>
 					
@@ -664,7 +664,7 @@ Commitments and UOWHFs rely on the newer notion of inaccessible entropy.</span><
 		  <a href="http://www.cs.princeton.edu/%7Emohammad/">Mohammad 
 		  Mahmoody</a> and <a href="http://www.cs.princeton.edu/%7Edxiao/">
 		  David Xiao</a> <br><strong>A New Sampling Protocol and Applications to 
-		  Basing Cryptographic Primitives on the Hardness of NP </strong><img height="11" src="new.gif" width="28"></span></span><br>
+		  Basing Cryptographic Primitives on the Hardness of NP </strong></span></span><br>
 
 		  <span style="font-weight: 400;">
 		  <span class="style14">IEEE Conference on Computational Complexity&nbsp; 
@@ -744,7 +744,7 @@ long as the verifier is also given a good approximation of the value
 		  Interactive Argument </strong></span></span></b></span>
 		  <span style="font-weight: 400;">
 		  <span dir="LTR" style="font-weight: 400"><b>
-		  <img height="12" src="updated.gif" width="60"><br></b></span>IEEE Symposium on Foundations of Computer Science (FOCS), 
+		  <br></b></span>IEEE Symposium on Foundations of Computer Science (FOCS), 
 		  2009.<br><strong>Invited to the FOCS 2009 special issue of 
 		  SICOMP</strong><br>
 		  [<a href="javascript:toggle('abstract-ParallelRepetition')">Abstract</a>] 
