--- a/Courses/FOC/f10.html
+++ b/Courses/FOC/f10.html
@@ -124,6 +124,8 @@ potentially be a final take home exam</b></li>
 	  </b></b></b>
 	  <ol>
 		  <li>Exe1 <a href="Ex1.pdf">pdf</a><br>Due Nov 29.</li>
+		  <li>Exe2 <a href="Ex2.pdf">pdf</a><br>Due Dec 27.</li>
+		  <li>Exe3 <a href="ex3.pdf">pdf</a><br>Due Jan.&nbsp; 17.</li>
 	  </ol>
       <ul>
       </ul>
