--- a/Courses/Pseudorandomness/seminar.html
+++ b/Courses/Pseudorandomness/seminar.html
@@ -1405,6 +1405,54 @@ table.MsoTableGrid
 }
 
 
+.auto-style8 {
+	color: red;
+}
+.auto-style9 {
+	font-size: large;
+	color: red;
+}
+.auto-style10 {
+	color: red;
+	text-align: center;
+	vertical-align: top;
+	font-size: larger;
+	border-left-style: solid;
+	border-left-color: inherit;
+	border-left-width: 1pt;
+	border-right-style: solid;
+	border-right-color: inherit;
+	border-right-width: 1pt;
+	border-top-style: none;
+	border-top-color: inherit;
+	border-top-width: medium;
+	border-bottom-style: solid;
+	border-bottom-color: inherit;
+	border-bottom-width: 1pt;
+	padding: 0cm 5.4pt;
+	background: rgb(149,179,215) 0% 50%;
+}
+.auto-style11 {
+	text-align: center;
+	vertical-align: middle;
+	color: red;
+	border-left-style: none;
+	border-left-color: inherit;
+	border-left-width: medium;
+	border-right-style: solid;
+	border-right-color: inherit;
+	border-right-width: 1pt;
+	border-top-style: none;
+	border-top-color: inherit;
+	border-top-width: medium;
+	border-bottom-style: solid;
+	border-bottom-color: inherit;
+	border-bottom-width: 1pt;
+	padding: 0cm 5.4pt;
+	background: rgb(149,179,215) 0% 50%;
+}
+
+
 </style>
 
 
@@ -1746,24 +1794,24 @@ k-wise <st1:place w:st="on"><st1:city w:st="on">Independence<br></st1:city></st1
     </tr>
     <tr >
       <td
- style="BORDER-BOTTOM: 1pt solid; TEXT-ALIGN: center; BORDER-LEFT: 1pt solid; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 84.65pt; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; VERTICAL-ALIGN: top; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" 
-   ><span class="auto-style1">8<br>
+ style="WIDTH: 84.65pt; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" class="auto-style10" 
+   >8<br class="auto-style8">
       </td>
       <td
- style="BORDER-BOTTOM: 1pt solid; TEXT-ALIGN: center; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 106.35pt; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; VERTICAL-ALIGN: middle; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" 
+ style="WIDTH: 106.35pt; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" class="auto-style11" 
      >9.12
       </span>
       </td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style3">
-      <p class="MsoNoSpacing" align="center"><span class="auto-style4"><o:p>Lev Tetrov       </o:p></span> </p>
+      <p class="auto-style9" align="center">NO CLASS</p>
  </td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style1">
-      <p class="auto-style1" ><span style="COLOR: black">Expander Graphs<br>
-      Sec. 4-4.1</span><br>
+      <p class="auto-style1" ><span class="auto-style8">Expander Graphs<br>
+      Sec. 4-4.1</span><br class="auto-style8">
       </td>
     </tr>
     <tr >
