--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@ DIV.Section1 {
 	  <div class="box" id="Img1" style="border-style: none; border-width: 1px; display: block;">
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
-		<a href="javascript:MySwitch('Img1','Img2')"><img alt="" src="iftachG.jpg" class="style22" height="192" width="254"></a></span><br></font></span></div>
+		<a href="javascript:MySwitch('Img1','Img2')">
+		  <img alt="" src="Face.jpg" class="style22" height="233" width="192"></a></span><br></font></span></div>
 
     <div class="box" id="Img2" style="border-style: none; border-width: 1px; display: none;">
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
-		<a href="javascript:MySwitch('Img2','Img1')"><img alt="" src="iftachC.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18"> <br>
-
+		<a href="javascript:MySwitch('Img2','Img1')"><img alt="" src="iftachC.jpg" class="style22" height="233" width="308"></a></span><br><span class="style18"> 
 	</span></font></span></div>
 
 
